--- a/components/feature/sitepermissions/src/main/res/values-ia/strings.xml
+++ b/components/feature/sitepermissions/src/main/res/values-ia/strings.xml
@@ -35,4 +35,14 @@
     <string name="mozac_feature_sitepermissions_persistent_storage_title">Permitte tu que %1$s stocka datos in le memoria persistente?</string>
     <!-- Title of a dialog to use EME. %1$s will be replaced with the URL of the current page -->
     <string name="mozac_feature_sitepermissions_media_key_system_access_title">Permitte tu a %1$s de reproducer le contento protegite per DRM?</string>
+    <!-- Title of a dialog to use cross origin storage permission. %1$s is the name of the site URL (www.site1.example) trying to track the user's activity.
+     %2$s is the name of the site URL (www.site2.example) that the user is visiting.  This is the same domain name displayed in the address bar -->
+    <string name="mozac_feature_sitepermissions_storage_access_title">Permitter que %1$s usa su cookies sur %2$s?</string>
+    <!-- Message of a dialog offering more context about the cross origin storage permission.
+    %s is the name of the site URL (www.site1.example) trying to track the user's activity. -->
+    <string name="mozac_feature_sitepermissions_storage_access_message">Es un bon idea blocar le accesso si non es clar proque %s require iste datos.</string>
+    <!-- Text for a negative button in the storage access permission request dialog. This button will not give access to this permission. -->
+    <string name="mozac_feature_sitepermissions_storage_access_not_allow">Blocar</string>
+    <!-- Clickable text that will open a new tab navigating the user to online documentation about specific features. -->
+    <string name="mozac_feature_sitepermissions_learn_more_title">Pro saper plus</string>
 </resources>
